--- a/src/pages/Holding Page/holding_page.css
+++ b/src/pages/Holding Page/holding_page.css
@@ -101,6 +101,7 @@
   width: 100%;
   gap: 20px;
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 .brand_span {
   font-weight: 200;
@@ -108,4 +109,45 @@
 .brand_logo {
   display: flex;
   gap: 40px;
+}
+.form_background {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.background_image {
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+}
+form {
+  background-color: white;
+  position: absolute;
+  top: 100px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.form_div {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+label {
+  font-size: 12px;
+  color: #0d1f2e;
+}
+.form_heading {
+  font-weight: bold;
+  font-size: 15px;
+}
+input {
+  padding: 5px;
+  border-radius: 8px;
+  border: 1px solid #909090;
 }
