--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -57,36 +57,37 @@ li {
   height: 20px;
   width: 20px;
 }
-.country_div span {
+.country_div a {
   font-size: 12px;
   color: #0d1f2e;
   opacity: 0.5;
+  display: flex;
+  transition: opacity 1s ease-in-out;
 }
-.uk_text:after {
-  content: "";
+.bigger_country_div {
+  display: flex;
+  flex-direction: column;
+}
+
+.green_line {
   display: block;
-  width: 100%;
-  width: 2px;
+  width: 95%;
+  height: 2px;
   margin-top: 5px;
+  margin-left: 10px;
   background-color: transparent;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 1s ease-in-out;
 }
-.nig:after {
-  content: "";
-  display: block;
-  width: 100%;
-  width: 2px;
-  margin-top: 5px;
-  background-color: transparent;
-  transition: background-color 0.2s ease-in-out;
-}
-.uk_text:hover:after,
-.uk_text:active:after,
-.nig_text:hover:after,
-.nig_text:active:after {
+.bigger_country_div:hover .green_line {
   background-color: #a4c61f;
+}
+.bigger_country_div:active .green_line {
+  background-color: #a4c61f;
+}
+.bigger_country_div:hover .country_div a {
   opacity: 1;
 }
+
 .account_button {
   background: #a4c61f;
   color: white;
