--- a/src/pages/Home_page/homepage.css
+++ b/src/pages/Home_page/homepage.css
@@ -135,7 +135,7 @@
   display: flex;
   flex-direction: column;
   background-color: #017337;
-  margin-top: 5vh;
+  margin-top: 4vh;
 }
 .first_lower,
 .second_lower,
@@ -150,6 +150,7 @@
 .first_lower span {
   color: #ffffff;
   font-size: 14px;
+  margin-top: 10px;
 }
 .second_lower {
   margin-top: 20px;
@@ -167,6 +168,7 @@
   background-color: #a4c61f;
   padding: 14px 22px;
   border-radius: 52px;
+  margin-bottom: 10px;
 }
 .category_container {
   width: 92.5%;
