--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -105,10 +105,10 @@ li {
   margin-right: 50px;
 }
 .user_image {
-  height: 50px;
-  width: 50px;
+  height: 43px;
+  width: 43px;
   border-radius: 100%;
-  cursor: pointer;
+  border: 0;
 }
 .user_container span {
   color: #0d1f2e;
