--- a/src/pages/Holding Page/holding_page.css
+++ b/src/pages/Holding Page/holding_page.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  position: fixed;
+  position: relative;
   top: 10px;
   left: 0;
   right: 0;
@@ -8,11 +8,11 @@
   padding: 20px;
   align-items: center;
   justify-content: space-between;
-
-  z-index: 1;
 }
 .left_header_section {
   margin-left: 50px;
+
+  margin-top: 10px;
 }
 .header_logo {
   height: 40px;
@@ -21,6 +21,9 @@
 }
 .right_header_section {
   margin-right: 50px;
+
+  display: flex;
+  align-items: center;
 }
 .header_button {
   background: #a4c61f;
@@ -36,8 +39,9 @@
   justify-content: center;
   align-items: center;
   height: 55vh;
+  margin-top: 50px;
+
   width: 100%;
-  margin-top: 150px;
 }
 .hero {
   height: 100%;
@@ -87,6 +91,9 @@
   bottom: 10px;
   top: 0;
 }
+.right_header_section .menu_icon {
+  display: none;
+}
 .cooking_items {
   width: 100%;
   height: 100%;
@@ -100,11 +107,12 @@
   height: 20vh;
   width: 100%;
   gap: 24px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 .brand_span {
   font-weight: 200;
+  text-align: center;
 }
 .brand_logo {
   display: flex;
@@ -124,7 +132,8 @@
 .background_image {
   width: 100%;
   height: 100%;
-  opacity: 0.1;
+  background-color: #fbfcf6;
+  opacity: 0.5;
 }
 form {
   background-color: white;
@@ -190,11 +199,73 @@ hr {
   width: 100%;
   color: #0d1f2e1a;
   margin-bottom: 20px;
+  position: absolute;
+  bottom: 45px;
 }
 .copyright_container {
   padding-bottom: 30px;
+  position: absolute;
+  bottom: 0px;
+  margin-top: 20px;
 }
 .copyright {
   color: #0d1f2e;
   font-size: 14px;
+}
+@media (max-width: 600px) {
+  .left_header_section {
+    margin-left: 10px;
+  }
+  .header_button {
+    display: none;
+  }
+  .right_header_section {
+    margin-right: 10px;
+  }
+  .right_header_section .menu_icon {
+    display: block;
+    color: #a4c61f;
+    transform: scale(1.6);
+  }
+  .left_hero_section {
+    margin-left: 20px;
+    width: 40%;
+  }
+  .right_hero_section {
+    width: 100%;
+  }
+  .cooking_items {
+    width: 100%;
+    z-index: 0;
+    height: 100%;
+  }
+  .span_2 {
+    line-height: 18px;
+  }
+  .brand {
+    margin-top: 100px;
+    width: 100%;
+    gap: 0px;
+    margin-bottom: 50px;
+  }
+
+  .brand_logo {
+    gap: 0;
+  }
+  .brand_logo_images {
+    height: 10px;
+  }
+  .checkbox_div {
+    display: none;
+  }
+  .form_main_button {
+    margin-top: 10px;
+  }
+  .form_background {
+    height: 110vh;
+  }
+  .form_heading {
+    text-align: center;
+    line-height: 23px;
+  }
 }
