much needed changes

--- a/src/pages/Holding Page/holding_page.css
+++ b/src/pages/Holding Page/holding_page.css
@@ -288,3 +288,11 @@ hr {
     line-height: 23px;
   }
 }
+@media (max-width: 380px) {
+  .hero_container {
+    height: 60vh;
+  }
+  .hero_button {
+    margin-top: 16px;
+  }
+}
