--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 @font-face {
   font-family: Gotham;
-  src: url(./assets/font/Gotham\ Book.otf);
+  src: url(./assets/font/Gotham\ Book.woff2);
 }
 body {
   overflow-x: hidden;
