--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Gotham";
+  font-family: "Gotham", Arial, Helvetica, sans-serif;
 }
 @font-face {
   font-family: Gotham;
