--- a/src/pages/Holding Page/holding_page.css
+++ b/src/pages/Holding Page/holding_page.css
@@ -202,7 +202,7 @@ hr {
   width: 100%;
   color: #0d1f2e1a;
   margin-bottom: 20px;
-  position: absolute;
+  position: relative;
   bottom: 45px;
 }
 .copyright_container {
